# gestaolegal

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SPA_MIGRATION_SUMMARY.md  app.py  config.ini  config_test.ini  create_super_user.py  docker-compose.dev.yml  docker-compose.override.example.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.qa.yml  docker-compose.test.yml  docker-compose.yml  install_docker_docker_compose.sh  modelo.mwb  modelo.mwb.bak  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: build_image.yml  deploy_qa.yml
assets/: create_dev_admin.sql
frontend/: Dockerfile  package.json  svelte.config.js
frontend/src/: app.css  hooks.server.ts
gestaolegal/: __init__.py  app.py  config.py  exceptions.py  handlers.py  logging_config.py  middleware.py  wsgi.py
gestaolegal/arquivos/: forms.py  models.py  views.py
gestaolegal/casos/: forms.py  models.py  views.py  views_utils.py
gestaolegal/common/: __init__.py  constants.py  pagination_result.py
gestaolegal/controllers/: __init__.py  arquivo_controller.py  assistencia_judiciaria_controller.py  atendido_controller.py  auth_controller.py  caso_controller.py  casos_controller.py  fila_atendimento_controller.py  notificacoes_controller.py  orientacao_juridica_controller.py  plantao_controller.py  principal_controller.py  relatorio_controller.py  roteiro_controller.py  search_controller.py  user_controller.py
gestaolegal/database/: __init__.py  session.py  tables.py
gestaolegal/forms/: __init__.py  arquivo.py  base_form_mixin.py  endereco_form_mixin.py  relatorio.py  usuario.py
gestaolegal/models/: __init__.py  arquivo.py  arquivo_caso.py  arquivo_caso_input.py  arquivos_evento.py  assistencia_judiciaria.py  assistencia_judiciaria_input.py  assistencia_judiciaria_x_orientacao_juridica.py  assistido.py  assistido_input.py  assistido_pessoa_juridica.py  atendido.py  atendido_input.py  atendido_x_orientacao_juridica.py  base_model.py  caso.py  caso_input.py  dia_plantao.py  dias_marcados_plantao.py  endereco.py  evento.py  evento_input.py  fila_atendidos.py  fila_atendimento.py  fila_atendimento_input.py  historico.py  lembrete.py  lembrete_input.py  notificacao.py  orientacao_juridica.py  orientacao_juridica_input.py  plantao.py  processo.py  processo_input.py  registro_entrada.py  roteiro.py  roteiro_input.py  user.py  user_input.py  usuario.py
gestaolegal/notificacoes/: models.py  views.py  views_utils.py
gestaolegal/plantao/: atendido_controller.py  forms.py  models.py  transforms.py  views.py  views_util.py
gestaolegal/principal/: views.py
gestaolegal/relatorios/: forms.py  views.py  views_utils.py
gestaolegal/repositories/: __init__.py  arquivo_caso_repository.py  arquivo_repository.py  assistencia_judiciaria_repository.py  assistido_repository.py  atendido_repository.py  base_repository.py  caso_repository.py  dias_marcados_repository.py  endereco_repository.py  evento_repository.py  fila_atendimento_repository.py  historico_repository.py  lembrete_repository.py  notificacao_repository.py  orientacao_juridica_repository.py  pagination_result.py  (+8 more)
gestaolegaldaj/: __init__.py
migrations/: env.py
scripts/: create_db_procedure.sh  initialize_dev_environment.sh  initialize_environment.sh  run_tests.sh
tests/: Dockerfile.test  conftest.py  requirements.txt  test_files.py  test_login.py  test_perfil_assistido.py  test_user.py
web/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
(+1050 files in other folders)
