[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gestaolegal"
version = "0.1.0"
description = "Sistema de Gestão Legal"
requires-python = ">=3.11"
dependencies = [
    "aiosmtpd==1.4.6",
    "alembic==1.13.1",
    "astroid==2.2.5",
    "bcrypt==3.1.7",
    "blinker==1.4",
    "certifi==2019.11.28",
    "cffi==1.15.1",
    "click==8.0.1",
    "colorama==0.4.1",
    "cryptography==42.0.0",
    "email_validator==2.1.0.post1",
    "flask==2.2.5",
    "flask-bcrypt==1.0.1",
    "flask-login==0.6.3",
    "flask-mail==0.9.1",
    "flask-marshmallow==0.15.0",
    "flask-migrate==4.0.5",
    "flask-paginate==2022.1.8",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
    "gunicorn==20.0.4",
    "isort==4.3.15",
    "itsdangerous==2.1.2",
    "jinja2==3.0.3",
    "lazy-object-proxy==1.3.1",
    "mako==1.1.2",
    "markupsafe==2.1.3",
    "marshmallow==3.6.1",
    "marshmallow-sqlalchemy==0.23.1",
    "pycparser==2.20",
    "pylint==2.3.1",
    "pymysql==0.9.3",
    "python-dateutil==2.8.1",
    "python-editor==1.0.4",
    "pytz==2021.1",
    "rope==0.17.0",
    "six==1.14.0",
    "sqlalchemy==2.0.27",
    "toml==0.10.1",
    "werkzeug==2.2.3",
    "wincertstore==0.2",
    "wrapt==1.11.1",
    "wtforms==3.0.1",
]

[tool.setuptools]
packages = ["gestaolegal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
adopts = "-v"

[project.optional-dependencies]
dev = [
    "pytest-base-url>=2.1.0",
    "pytest-playwright==0.7.0",
    "aiosmtpd==1.4.6",
    "pytest-base-url",
]
