[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gestaolegal"
version = "0.1.0"
description = "Sistema de Gestão Legal"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.1",
    "bcrypt>=4.0.0",
    "flask==3.1.0",
    "flask-mail",
    "flask-cors",
    "gunicorn==20.0.4",
    "pymysql",
    "python-dateutil==2.8.1",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.27",
    "pyjwt>=2.10.1",
    "pydantic>=2.11.9",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.basedpyright]
reportUnusedCallResult = false

[dependency-groups]
dev = [
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
